# rpa-portal-transparencia

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
rpa_api/: CLAUDE.md  README.md  app.py  pyproject.toml  schemas.py  scraper.py
