[project]
name = "rpa-api"
version = "0.1.0"
description = ""
authors = [
    {name = "João Pedro Sanglard",email = "joaopedross3@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.135.3,<0.136.0)",
    "playwright (>=1.58.0,<2.0.0)",
    "slowapi (>=0.1.9) ; python_version >= \"3.13\" and python_version < \"4.0\""
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
